--- a/src/app.postcss
+++ b/src/app.postcss
@@ -253,6 +253,7 @@ svg.shape-fill {
 .individual-project {
 	transform-origin: 100%;
 	width: 0%;
+	height: 0px;
 	transition: all 0.2s linear;
 	transform: scaleX(0);
 	opacity: 0;
@@ -345,8 +346,33 @@ header ul a svg:hover {
 }
 
 .project-body {
-	max-height: 300px;
+	min-height: 300px;
 }
+
+.vheight {
+	height: 75vh;
+}
+
+/*
+ *  Scrollbar
+ */
+
+::-webkit-scrollbar-track {
+	/*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
+	background-color: hsl(var(--b1));
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+	background-color: hsl(var(--b1));
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: hsl(var(--b2));
+	border: none;
+}
+
+/*Media Queries*/
 
 @media (max-width: 900px) {
 	.wave-bottom {
@@ -374,11 +400,15 @@ header ul a svg:hover {
 	.wave-bottom {
 		display: none;
 	}
+
+	.individual-project {
+		display: none;
+	}
 }
 
 @media (min-width: 768px) {
 	.project-body {
-		max-height: 300px;
+		min-height: 300px;
 	}
 }
 
